Fixed a visual bug to do with the overflowing of the projectTitleHolder-element

--- a/css/mainContent/taskHolder.css
+++ b/css/mainContent/taskHolder.css
@@ -426,6 +426,7 @@
 			.taskItem .functionHolder .projectHolder .projectTitle {
 				color: #777;
 				font-size: 14px;
+				max-width: 20vw;
 			}
 
 			.taskItem .functionHolder .projectHolder .projectIcon {
